<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource,AlwaysShowAction">
    <item
        android:id="@+id/dial_number"
        android:icon="@drawable/ic_phone_vector"
        android:showAsAction="always"
        android:title="@string/dial_number"
        app:showAsAction="always" />
    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive_vector"
        android:showAsAction="always"
        android:title="@string/archive"
        app:showAsAction="always" />
    <item
        android:id="@+id/unarchive"
        android:icon="@drawable/ic_unarchive_vector"
        android:showAsAction="always"
        android:title="@string/unarchive"
        app:showAsAction="always" />
    <item
        android:id="@+id/manage_people"
        android:showAsAction="never"
        android:title="@string/add_person"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_number_to_contact"
        android:title="@string/add_number_to_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_number"
        android:title="@string/copy_number_to_clipboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/rename_conversation"
        android:showAsAction="never"
        android:title="@string/rename_conversation"
        app:showAsAction="never" />
    <item
        android:id="@+id/conversation_details"
        android:showAsAction="never"
        android:title="@string/conversation_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/exchange_keys"
        android:showAsAction="never"
        android:title="@string/e2e_key_exchange"
        app:showAsAction="never" />
    <item
        android:id="@+id/exchange_mesh_address"
        android:showAsAction="never"
        android:title="@string/mesh_address_exchange"
        app:showAsAction="never" />
    <item
        android:id="@+id/start_mesh_chat"
        android:showAsAction="never"
        android:title="@string/mesh_start_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/share_identity_vcard"
        android:showAsAction="never"
        android:title="@string/share_identity_vcard"
        app:showAsAction="never" />
    <item
        android:id="@+id/encrypt_messages"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/e2e_encrypt_messages"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_contact_key"
        android:showAsAction="never"
        android:title="@string/e2e_edit_contact_key"
        app:showAsAction="never" />
    <item
        android:id="@+id/mark_as_unread"
        android:showAsAction="never"
        android:title="@string/mark_as_unread"
        app:showAsAction="never" />
    <item
        android:id="@+id/block_number"
        android:showAsAction="never"
        android:title="@string/mark_as_spam_block"
        app:showAsAction="never" />
    <item
        android:id="@+id/mark_as_not_spam"
        android:showAsAction="never"
        android:title="@string/mark_as_not_spam"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_vector"
        android:showAsAction="never"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/restore"
        android:showAsAction="never"
        android:title="@string/restore_all_messages"
        app:showAsAction="never" />
</menu>
