<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/manage_e2e_keys_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/manage_e2e_keys_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/manage_e2e_keys_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/manage_e2e_keys"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/manage_e2e_keys_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/manage_e2e_keys_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/manage_e2e_keys_section_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage_e2e_keys" />

            <RelativeLayout
                android:id="@+id/manage_e2e_keys_public_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_public_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e2e_public_key_label" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_public_value"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/manage_e2e_keys_public_label"
                    android:textIsSelectable="true" />

            </RelativeLayout>

            <include layout="@layout/divider" />

            <RelativeLayout
                android:id="@+id/manage_e2e_keys_private_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_private_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e2e_private_key_label" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_private_value"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/manage_e2e_keys_private_label"
                    android:textIsSelectable="true" />

            </RelativeLayout>

            <include layout="@layout/divider" />

            <RelativeLayout
                android:id="@+id/manage_e2e_keys_copy_public_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_copy_public_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e2e_copy_public_key" />

            </RelativeLayout>

            <include layout="@layout/divider" />

            <RelativeLayout
                android:id="@+id/manage_e2e_keys_copy_private_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_copy_private_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e2e_copy_private_key" />

            </RelativeLayout>

            <include layout="@layout/divider" />

            <RelativeLayout
                android:id="@+id/manage_e2e_keys_backup_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_backup_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e2e_backup_keys" />

            </RelativeLayout>

            <include layout="@layout/divider" />

            <RelativeLayout
                android:id="@+id/manage_e2e_keys_import_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_import_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e2e_import_keys" />

            </RelativeLayout>

            <include layout="@layout/divider" />

            <RelativeLayout
                android:id="@+id/manage_e2e_keys_regenerate_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/manage_e2e_keys_regenerate_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e2e_regenerate_keys" />

            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
