<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thread_message_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/small_margin"
    android:foreground="@drawable/selector"
    android:paddingHorizontal="@dimen/activity_margin">

    <RelativeLayout
        android:id="@+id/thread_message_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:id="@+id/thread_message_sender_photo"
            android:layout_width="@dimen/list_icon_size_medium"
            android:layout_height="@dimen/list_icon_size_medium"
            android:layout_alignBottom="@+id/thread_message_body"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/medium_margin"
            android:src="@drawable/ic_person_vector"
            android:visibility="gone"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/thread_message_attachments_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/thread_message_sender_photo"
            android:divider="@drawable/linear_layout_vertical_divider"
            android:orientation="vertical"
            android:showDividers="middle" />

        <ImageView
            android:id="@+id/thread_message_play_outline"
            android:layout_width="@dimen/play_outline_size"
            android:layout_height="@dimen/play_outline_size"
            android:layout_alignEnd="@+id/thread_message_attachments_holder"
            android:layout_alignBottom="@+id/thread_message_attachments_holder"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:src="@drawable/ic_play_outline_vector"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/thread_message_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thread_message_attachments_holder"
            android:layout_marginVertical="@dimen/tiny_margin"
            android:layout_toEndOf="@id/thread_message_sender_photo"
            android:autoLink="email|web"
            android:background="@drawable/item_received_background"
            android:drawablePadding="8dp"
            android:padding="@dimen/normal_margin"
            android:textSize="@dimen/normal_text_size"
            tools:drawableEndCompat="@drawable/scheduled_message_icon"
            tools:text="Message content" />

        <LinearLayout
            android:id="@+id/thread_message_wallet_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thread_message_reaction"
            android:layout_toEndOf="@id/thread_message_sender_photo"
            android:layout_marginTop="@dimen/tiny_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/thread_message_pay"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/tiny_margin"
                android:layout_weight="1"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="@dimen/normal_margin"
                android:paddingVertical="@dimen/tiny_margin"
                android:text="@string/wallet_pay"
                android:textAllCaps="false"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/thread_message_wallet_toggle"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tiny_margin"
                android:layout_weight="1"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="@dimen/normal_margin"
                android:paddingVertical="@dimen/tiny_margin"
                android:text="@string/wallet_show_full_message"
                android:textAllCaps="false"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/thread_message_request_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thread_message_reaction"
            android:layout_marginTop="@dimen/tiny_margin"
            android:layout_toEndOf="@id/thread_message_sender_photo"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/small_margin"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/normal_margin"
                android:paddingTop="@dimen/normal_margin"
                android:paddingEnd="@dimen/normal_margin"
                android:paddingBottom="@dimen/normal_margin">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/thread_message_request_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smaller_text_size"
                    android:textStyle="bold"
                    tools:text="Requested amount: 100 sats" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/thread_message_request_federation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/smaller_text_size"
                    tools:text="Federation: Global Bitcoin Federation" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/thread_message_request_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/smaller_text_size"
                    tools:text="Request ID: 3f0a..." />

                <LinearLayout
                    android:id="@+id/thread_message_request_actions_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/thread_message_request_deny"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tiny_margin"
                        android:layout_weight="1"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:minHeight="0dp"
                        android:paddingHorizontal="@dimen/normal_margin"
                        android:paddingVertical="@dimen/tiny_margin"
                        android:text="@string/wallet_request_deny"
                        android:textAllCaps="false" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/thread_message_request_approve"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tiny_margin"
                        android:layout_weight="1"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:minHeight="0dp"
                        android:paddingHorizontal="@dimen/normal_margin"
                        android:paddingVertical="@dimen/tiny_margin"
                        android:text="@string/wallet_request_approve"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/thread_message_reaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/thread_message_body"
            android:layout_alignEnd="@+id/thread_message_body"
            android:layout_marginEnd="@dimen/tiny_margin"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:background="@drawable/item_reaction_background"
            android:paddingHorizontal="@dimen/tiny_margin"
            android:paddingVertical="@dimen/tiny_margin"
            android:textSize="@dimen/normal_text_size"
            android:visibility="gone"
            tools:text="👍" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
